--- a/Training.html
+++ b/Training.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Te Tai Hou Teams – 2025</title>
+<title>SUNDAY TRAINING SESSION TERM 4 - 2025</title>
 
 <style>
 /* --- General page setup --- */
@@ -162,6 +162,7 @@ th::after {
   </a>
   <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
 </header>
+  <a href="https://limonza.github.io/te-tai-hou-teams-2025">Te Tai Hou Teams</a>
 
 <div class="controls">
   <input id="search" type="text" placeholder="Search...">
