--- a/Training.html
+++ b/Training.html
@@ -160,7 +160,11 @@ th::after {
   <a href="https://www.poriruaheatbasketball.org" target="_blank">
     <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
-  <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
+  <h1>CLUB REGISTRATIONS 2025 - TERM 4</h1>
+  <p>
+    For more info, visit our 
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/" target="_blank">Te Tai Hou</a>.
+  </p>
 </header>
   <a href="https://limonza.github.io/te-tai-hou-teams-2025">Te Tai Hou Teams</a>
 
