--- a/Training.html
+++ b/Training.html
@@ -162,8 +162,8 @@ th::after {
   </a>
   <h1>CLUB REGISTRATIONS 2025 - TERM 4</h1>
   <p>
-    For more info, visit our 
-    <a href="https://limonza.github.io/te-tai-hou-teams-2025/" target="_blank">Te Tai Hou</a>.
+    Te Tai Hou teams
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/" target="_blank">HERE</a>.
   </p>
 </header>
 
