--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@ th::after {
   <a href="https://www.poriruaheatbasketball.org" target="_blank">
     <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
-  <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
+  <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1><br>
+  <p>
+    Te Tai Hou teams
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" target="_blank">HERE</a>.
+  </p>
 </header>
 
 <div class="controls">
@@ -352,3 +356,4 @@ toggleGroupsBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
