--- a/Training.html
+++ b/Training.html
@@ -161,10 +161,10 @@ th::after {
     <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
   <h1>CLUB REGISTRATIONS 2025 - TERM 4</h1><br><br>
-  <p>
+  <div>
     Te Tai Hou teams
     <a href="https://limonza.github.io/te-tai-hou-teams-2025/" target="_blank">HERE</a>.
-  </p>
+  </div>
 </header>
 
 <div class="controls">
