--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ th::after {
   </a>
   <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1><br>
   <p>
-    Te Tai Hou teams
+    Confirm Club Regos
     <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" target="_blank">HERE</a>.
   </p>
 </header>
@@ -356,4 +356,5 @@ toggleGroupsBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
