--- a/index.html
+++ b/index.html
@@ -161,10 +161,6 @@ th::after {
     <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
   <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1><br>
-  <p>
-    Confirm Club Regos
-    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" target="_blank">HERE</a>.
-  </p>
 </header>
 
 <div class="controls">
@@ -175,6 +171,11 @@ th::after {
   <button id="export">Export CSV</button>
   <button id="toggleGroups">Collapse All</button>
 </div>
+
+  <div>
+    Confirm Club Regos
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" target="_blank">HERE</a>.
+  </div>
 
 <div id="table-container"></div>
 </div>
@@ -356,5 +357,6 @@ toggleGroupsBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
