--- a/index.html
+++ b/index.html
@@ -156,11 +156,21 @@ th::after {
 
 <body>
 <div id="page-wrapper">
-<header>
+<header style="text-align: center; margin-bottom: 24px;">
+  <!-- Logo -->
   <a href="https://www.poriruaheatbasketball.org" target="_blank">
-    <img src="images/logo.png" alt="Porirua Heat Logo">
+    <img src="images/logo.png" alt="Porirua Heat Logo" style="height: 60px; border-radius: 50%; margin-bottom: 12px;">
   </a>
-  <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1><br>
+
+  <!-- Main Heading -->
+  <h1 style="font-size: 1.8em; margin: 0; color: #1a365d;">TE TAI HOU TEAMS – 2025 TERM 4</h1>
+
+  <!-- Hyperlink under heading -->
+  <div style="margin-top: 6px;">
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" target="_blank" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
+      Confirmed Club Registrations
+    </a>
+  </div>
 </header>
 
 <div class="controls">
@@ -357,6 +367,7 @@ toggleGroupsBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
