--- a/Training.html
+++ b/Training.html
@@ -161,10 +161,7 @@ th::after {
     <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
   <h1>CLUB REGISTRATIONS 2025 - TERM 4</h1>
-  <div>
-    Te Tai Hou teams
-    <a href="https://limonza.github.io/te-tai-hou-teams-2025/" target="_blank">HERE</a>.
-  </div>
+
 </header>
 
 <div class="controls">
@@ -177,6 +174,11 @@ th::after {
   <button id="pdfBtn">Generate PDF</button>
 </div>
 
+  <div>
+    Te Tai Hou teams
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/" target="_blank"/a>.
+  </div>
+  
 <div id="table-container"></div>
 </div>
 
