--- a/Training.html
+++ b/Training.html
@@ -174,7 +174,7 @@ th::after {
 </div>
 
 <div style="margin-top: 6px;">
-  <a href="https://limonza.github.io/te-tai-hou-teams-2025" target="_blank" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
+  <a href="https://limonza.github.io/te-tai-hou-teams-2025" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
     Te Tai Hou Teams
   </a>
 </div>
