--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ th::after {
 
 <!-- Hyperlink under heading -->
   <div style="margin-top: 6px;">
-    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" target="_blank" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
       Confirmed Club Registrations
     </a>
   </div>
@@ -363,6 +363,7 @@ toggleGroupsBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
