--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ let indicativeIndex = -1;
 
 const groupOrder = [
   "10U Dev","10U Elite","12U Dev","12U Elite",
-  "14U Dev Blue","14U Elite Black","14U Elite Gold","14U Dev Red",
+  "14U Black","14U Orange","14U Blaze","14U Flames",
   "16U Dev","16U Elite","20U","Mens","Womens"
 ];
 
@@ -363,6 +363,7 @@ toggleGroupsBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
